@@ -27,7 +27,7 @@ with open('README.rst', 'r') as f:
 # Dependencies
 extras_require = {
     'serial':   ['pyserial~=3.0'],
-    'neovi':    ['python-ics>=2.12']
+    'neovi':    ['python-ics>=2.12', 'filelock']
 }
 
 tests_require = [
